--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,21 +1,18 @@
-name: GitHub Metrics
-
+# Ref: https://github.com/lowlighter/metrics/blob/master/action.yml
+name: Metrics
 on:
+  schedule: [{ cron: '30 0,12 * * *' }]
   workflow_dispatch:
-  schedule:
-    - cron: "50 * * * *"
-  push:
-    branches:
-      - master
+  push: { branches: ['master'] }
 
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
     steps:
       # See action.yml for all options
-      - uses: Yutong-Zhou-cv/metrics@latest
+      - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.My_Page}}
+          token: ${{ secrets.METRICS_TOKEN }}
           filename: static/github-metrics.*
           config_padding: 0, 20
           committer_message: "chore: update github metrics [skip ci]"
@@ -23,8 +20,15 @@ jobs:
           # Options
           user: Yutong-Zhou-cv
           template: classic
+          config_gemoji : yes
           config_timezone: Asia/Tokyo
           config_display: large
+
+          # Base
+          base: header, activity, community, repositories
+          repositories_forks: no
+          repositories_affiliations: owner, collaborator
+          repositories_skipped: Yutong-Zhou-cv/Yutong-Zhou-cv
 
 
           # Coding habits
