--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,13 +17,13 @@ jobs:
           config_padding: 0, 20
           committer_message: "chore: update github metrics [skip ci]"
 
-      - uses: Platane/snk@v0.0.18
-        with:
-          # github user name to read the contribution graph from (**required**)
-          # using action context var `github.repository_owner` or specified user
-          github_user_name: ${{ github.Yutong-Zhou-cv }} #github.repository_owner
-          gif_out_path: static/github-snake.gif
-          svg_out_path: static/github-snake.svg
+#       - uses: Platane/snk@v0.0.18
+#         with:
+#           # github user name to read the contribution graph from (**required**)
+#           # using action context var `github.repository_owner` or specified user
+#           github_user_name: ${{ github.Yutong-Zhou-cv }} #github.repository_owner
+#           gif_out_path: static/github-snake.gif
+#           svg_out_path: static/github-snake.svg
           
           # Options
           user: Yutong-Zhou-cv
